fix(search): fix search option issues on iOS (#1414)

--- a/components/interactables/Search/Input/Input.less
+++ b/components/interactables/Search/Input/Input.less
@@ -190,10 +190,9 @@
   .search-recommends,
   .search-options {
     margin: 0;
-    width: calc(@full - (@light-spacing * 2));
-    left: @light-spacing;
-    right: @light-spacing;
-    top: @toolbar-height + (@normal-spacing * 8);
-    position: fixed;
+    width: @full;
+    left: unset;
+    right: @light-spacing * 3;
+    top: @normal-spacing * 3;
   }
 }
